--- a/melodic/distribution.yaml
+++ b/melodic/distribution.yaml
@@ -7,6 +7,11 @@ release_platforms:
   - bionic
 repositories:
   boost_sml:
+    release:
+      tags:
+        release: release/melodic/{package}/{version}
+      url: https://github.com/PickNikRobotics/boost_sml-release.git
+      version: 0.1.0-3
     source:
       type: git
       url: https://github.com/PickNikRobotics/boost_sml.git
@@ -137,17 +142,32 @@ repositories:
       version: master
     status: developed
   apriltag:
+    release:
+      tags:
+        release: release/melodic/{package}/{version}
+      url: https://github.com/PickNikRobotics/apriltag.git
+      version: 3.1.2-1
     source:
       type: git
       url: https://github.com/PickNikRobotics/apriltag.git
       version: master
     status: maintained
   universal_robot:
+    release:
+      tags:
+        release: release/melodic/{package}/{version}
+      url: https://github.com/davetcoleman/universal_robot.git
+      version: 3.1.2-1
     source:
       type: git
       url: https://github.com/davetcoleman/universal_robot.git
       version: calibration_devel_moveit_cleanup
   universal_robots_ros_driver:
+    release:
+      tags:
+        release: release/melodic/{package}/{version}
+      url: https://github.com/UniversalRobots/Universal_Robots_ROS_Driver
+      version: 3.1.2-1
     source:
       type: git
       url: https://github.com/UniversalRobots/Universal_Robots_ROS_Driver
