--- a/melodic/distribution.yaml
+++ b/melodic/distribution.yaml
@@ -89,12 +89,12 @@ repositories:
   universal_robot:
     source:
       type: git
-      url: https://github.com/davetcoleman/universal_robot.git
-      version: calibration_devel_moveit_cleanup
+      url: https://github.com/tylerjw/universal_robot.git
+      version: al_develop
   ur_robot_driver:
     source:
       type: git
-      url: https://github.com/UniversalRobots/Universal_Robots_ROS_Driver
-      version: 72453e14bfc262ade27c31d2086efc37a26543c6
+      url: https://github.com/tylerjw/Universal_Robots_ROS_Driver
+      version: al_develop
 type: distribution
 version: 1
