--- a/rosdep/private.yaml
+++ b/rosdep/private.yaml
@@ -4,3 +4,9 @@ ur_description:
   ubuntu: ros-melodic-ur-description
 ur_e_description:
   ubuntu: ros-melodic-ur-e-description
+moveit_resources_prbt_moveit_config:
+  ubuntu: ros-melodic-moveit-resources-prbt-moveit-config
+moveit_resources_prbt_pg70_support:
+  ubuntu: ros-melodic-moveit-resources-prbt-pg70-support
+moveit_resources_prbt_support:
+  ubuntu: ros-melodic-moveit-resources-prbt-support
